--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div id="main">
         <div id="top">
+            <img src="./img/logo/5cf2fd46f70a24e8481bdad89bff99d2.jfif" alt="logo" class="logo">
             <h2 class="top-title">FoodStore</h2>
             <a href="" class="kl-y">Login</a>
             <a href="" class="kl-y">SignUp</a>
